<resources>
    <string name="facebook_app_id">933394380043850</string>

    <string name="app_name">GTD_CRUD</string>
    <string name="Login">Login</string>
    <string name="Name">Name</string>
    <string name="Password">Password</string>
    <string name="Stay_signed_in">Stay signed in</string>
    <string name="Sign_in">Sign in</string>
    <string name="Welcome">Welcome</string>
    <string name="Login_incorrect">Name or Password incorrect, please try again.</string>
    <string name="Title">Title</string>
    <string name="Description">Description</string>
    <string name="Context">Context</string>
    <string name="Contact">Contact</string>
    <string name="Location">Location</string>
    <string name="Add">Add</string>
    <string name="Save">Save</string>
    <string name="Stuff_saved">Stuff saved</string>
    <string name="Remove">Remove</string>
    <string name="Done">Done</string>
    <string name="StuffEmpty">Needs title or description</string>
    <string name="Name_hint">Name (admin)</string>
    <string name="Password_hint">Password (admin)</string>
    <string name="db_save_error">Save error, please try again</string>
    <string name="stuff_deleted">Stuff deleted!</string>
    <string name="delete_error">Delete error</string>
    <string name="Search">Search</string>
    <string name="search_stuff">Search for stuff</string>
</resources>
